nori-rs/tui/src/bottom_pane/chat_composer/tests/snapshots/nori_tui__bottom_pane__chat_composer__tests__part2__large.snap
---
source: tui/src/bottom_pane/chat_composer/tests/part2.rs
expression: terminal.backend()
---
"                                                                                                    "
"› [Pasted Content 1005 chars]                                                                       "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
