nori-rs/tui/src/bottom_pane/chat_composer/tests/snapshots/nori_tui__bottom_pane__chat_composer__tests__part2__slash_popup_mo.snap
---
source: tui/src/bottom_pane/chat_composer/tests/part2.rs
expression: terminal.backend()
---
"                                                            "
"/ mo                                                        "
"                                                            "
"  /model   choose what model and reasoning effort to use    "
"  /memory  show the contents of all active instruction files"
